tons of DTOs and implement green waves extraction
